--- a/nextflow.config
+++ b/nextflow.config
@@ -24,7 +24,7 @@ params {
     docker_registry            = null
     validate_params            = true
     show_hidden_params         = false
-    schema_ignore_params       = ""
+    schema_ignore_params       = "schema_file_path,show_hidden_params"
     schema_file_path           = 'config/schema.json'
 
     // Max resource options
@@ -35,7 +35,10 @@ params {
 }
 
 // Load base.config
-includeConfig '../conf/base.config'
+includeConfig 'config/base.config'
+
+// Load modules.config
+includeConfig 'config/modules.config'
 
 // Load nf-core custom profiles from different institutions
 
