feat: add docker files

--- a/config/modules.config
+++ b/config/modules.config
@@ -15,8 +15,8 @@
 //
 
 process {
-    container = "broadinstitute/gatk3:3.8-1"
-    
+    container = "${params.docker_registry}/gatk3:4.6.1.0"
+
     withLabel:publish { 
         publishDir = [
             path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
