feat: preprocess fastq file

--- a/config/modules.config
+++ b/config/modules.config
@@ -15,8 +15,6 @@
 //
 
 process {
-    container = "${params.docker_registry}/gatk3:4.6.1.0"
-
     withLabel:publish { 
         publishDir = [
             path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
@@ -37,5 +35,6 @@ process {
 process {
     withName: 'FASTQ_SINGLE_TO_PAIR_READS' {
         ext.prefix = { "pair" }
+        container = "${params.docker_registry}/ubuntu-samtools:22.04-1.9"
     }
 }
