--- a/nextflow.config
+++ b/nextflow.config
@@ -64,7 +64,7 @@ process.shell = ['/bin/bash', '-euo', 'pipefail']
 // Set default registry for Docker and Podman independent of -profile
 // Will not be used unless Docker / Podman are enabled
 // Set to your registry if you have a mirror of containers
-docker.registry = 'namxle'
+// docker.registry = 'namxle'
 
 def trace_timestamp = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
 timeline {
