feat: aligment sorting

--- a/config/modules.config
+++ b/config/modules.config
@@ -35,6 +35,11 @@ process {
 process {
     withName: 'FASTQ_SINGLE_TO_PAIR_READS' {
         ext.prefix = { "pair" }
-        container = "${params.docker_registry}/ubuntu-samtools:22.04-1.9"
+        container = "${params.docker_registry}/ubuntu-tools:22.04-1.9"
+    }
+
+    withName: 'FASTQ_SINGLE_TO_PAIR_READS' {
+        ext.prefix = { "pair" }
+        container = "${params.docker_registry}/ubuntu-tools:22.04-1.9"
     }
 }
