fix: main workflow

--- a/config/modules.config
+++ b/config/modules.config
@@ -38,8 +38,8 @@ process {
         container = "${params.docker_registry}/ubuntu-tools:22.04-1.9"
     }
 
-    withName: 'FASTQ_SINGLE_TO_PAIR_READS' {
-        ext.prefix = { "pair" }
+    withName: 'ALIGNMENT_SORTING' {
+        ext.prefix = { "align" }
         container = "${params.docker_registry}/ubuntu-tools:22.04-1.9"
     }
 }
