feat: gvcf calling using gatk4

--- a/config/modules.config
+++ b/config/modules.config
@@ -42,4 +42,9 @@ process {
         ext.prefix = { "align" }
         container = "${params.docker_registry}/ubuntu-tools:22.04-1.9"
     }
+
+    withName: 'VARIANT_CALLING' {
+        ext.prefix = { "vc" }
+        container = "broadinstitute/gatk:4.6.1.0"
+    }
 }
