feat: analyze genes coverage

--- a/config/modules.config
+++ b/config/modules.config
@@ -33,7 +33,7 @@ process {
 }
 
 process {
-    withName: 'PREPROCESS' {
+    withName: 'PREPROCESS_FASTQ' {
         ext.prefix = { "preprocessed" }
         container = "${params.docker_registry}/ubuntu-tools:22.04-1.9"
     }
@@ -43,8 +43,18 @@ process {
         container = "${params.docker_registry}/ubuntu-tools:22.04-1.9"
     }
 
-    withName: 'VARIANT_CALLING' {
-        ext.prefix = { "vc" }
+    withName: 'MARK_DUPLICATES' {
+        ext.prefix = { "dedup" }
         container = "broadinstitute/gatk:4.6.1.0"
+    }
+
+    // withName: 'VARIANT_CALLING' {
+    //    ext.prefix = { "vc" }
+    //    container = "broadinstitute/gatk:4.6.1.0"
+    // }
+
+    withName: 'ANALYZE_GENE_COVERAGE' {
+        ext.prefix = { "coverage" }
+        container = "${params.docker_registry}/ubuntu-tools:22.04-1.9"
     }
 }
