fix: resource configuration

--- a/config/base.config
+++ b/config/base.config
@@ -25,50 +25,34 @@ process {
     //        adding in your local modules too.
     // See https://www.nextflow.io/docs/latest/config.html#config-process-selectors
 
-    withLabel:process_single_small {
+    withLabel:process_small {
         cpus   = { check_max( 0.5                , 'cpus'    ) }
         memory = { check_max( 4.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 1.h  * task.attempt, 'time'    ) }
     }
-    
     withLabel:process_single {
         cpus   = { check_max( 1                  , 'cpus'    ) }
         memory = { check_max( 6.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 1.h  * task.attempt, 'time'    ) }
-    }
-    withLabel:process_single_medium {
-        cpus   = { check_max( 1                   , 'cpus'   ) }
-        memory = { check_max( 8.GB * task.attempt, 'memory' ) }
-        time   = { check_max( 1.h   * task.attempt, 'time'   ) }
     }
     withLabel:process_single_high {
         cpus   = { check_max( 1                   , 'cpus'   ) }
         memory = { check_max( 15.GB * task.attempt, 'memory' ) }
         time   = { check_max( 1.h   * task.attempt, 'time'   ) }
     }
-    withLabel:process_dual_low {
+    withLabel:process_dual {
         cpus   = { check_max( 2                   , 'cpus'   ) }
         memory = { check_max( 6.GB  * task.attempt, 'memory' ) }
         time   = { check_max( 1.h   * task.attempt, 'time'   ) }
     }
-    withLabel:process_dual_medium {
-        cpus   = { check_max( 2                   , 'cpus'    ) }
-        memory = { check_max( 10.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 2.h   * task.attempt, 'time'    ) }
-    }
     withLabel:process_medium {
-        cpus   = { check_max( 2                   , 'cpus'    ) }
+        cpus   = { check_max( 4                   , 'cpus'    ) }
         memory = { check_max( 15.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 3.h   * task.attempt, 'time'    ) }
     }
-    withLabel:process_high_medium {
-        cpus   = { check_max( 4                   , 'cpus'    ) }
-        memory = { check_max( 10.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 1.h   * task.attempt, 'time'    ) }
-    }
     withLabel:process_high {
-        cpus   = { check_max( 14                  , 'cpus'    ) }
-        memory = { check_max( 15.GB * task.attempt, 'memory'  ) }
+        cpus   = { check_max( 10                  , 'cpus'    ) }
+        memory = { check_max( 10.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 2.h   * task.attempt, 'time'    ) }
     }
     withLabel:process_long {
@@ -84,49 +68,4 @@ process {
         errorStrategy = 'retry'
         maxRetries    = 2
     }
-
-    // Custom
-    withLabel:process_simply_high {
-        cpus   = { check_max( 10    * task.attempt, 'cpus'    ) }
-        memory = { check_max( 20.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 1.h   * task.attempt, 'time'    ) }
-    }
-
-    withLabel:process_simply_medium_cpu {
-        cpus   = { check_max( 10     * task.attempt, 'cpus'    ) }
-        memory = { check_max( 10.GB  * task.attempt, 'memory'  ) }
-        time   = { check_max( 1.h    * task.attempt, 'time'    ) }
-    }
-
-    withLabel:process_fixed_low_cpu {
-        cpus   = { check_max( 10    * task.attempt, 'cpus'    ) }
-        memory = { check_max( 20.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 1.h   * task.attempt, 'time'    ) }
-    }
-
-    withLabel:process_fixed_low_cpu_medium_memory {
-        cpus   = { check_max( 10    * task.attempt, 'cpus'    ) }
-        memory = { check_max( 30.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 1.h   * task.attempt, 'time'    ) }
-    }
-
-    withLabel:process_fixed_average_cpu {
-        cpus   = { check_max( 20    * task.attempt, 'cpus'    ) }
-        memory = { check_max( 20.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 1.h   * task.attempt, 'time'    ) }
-    }
-
-    withLabel: process_fixed_low_cpu_high_memory {
-        cpus   = { check_max( 10    * task.attempt, 'cpus'    ) }
-        memory = { check_max( 40.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 1.h   * task.attempt, 'time'    ) }
-    }
-
-    // Custom
-    withLabel:process_fixed_medium_cpu {
-        cpus   = { check_max( 30    * task.attempt, 'cpus'    ) }
-        memory = { check_max( 30.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 1.h   * task.attempt, 'time'    ) }
-    }
-
 }
