refactor: README.md

--- a/config/modules.config
+++ b/config/modules.config
@@ -45,7 +45,7 @@ process {
 
     withName: 'MARK_DUPLICATES' {
         ext.prefix = { "dedup" }
-        container = "broadinstitute/gatk:4.6.1.0"
+        container = "namxle/gatk:4.6.1.0"
     }
 
     // withName: 'VARIANT_CALLING' {
