feat: add production profile into nextflow config

--- a/nextflow.config
+++ b/nextflow.config
@@ -44,7 +44,7 @@ includeConfig 'config/modules.config'
 // Load custom profiles from different institutions.
 
 profiles {
-    docker {
+    test {
         docker.enabled         = true
         docker.userEmulation   = true
         conda.enabled          = false
@@ -55,6 +55,19 @@ profiles {
         apptainer.enabled      = false
         cleanup                = false
     }
+
+    production {
+        docker.enabled         = true
+        docker.userEmulation   = true
+        conda.enabled          = false
+        singularity.enabled    = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+        apptainer.enabled      = false
+        cleanup                = true
+    }
+
 }
 
 // Capture exit codes from upstream processes when piping
