--- a/config/modules.config
+++ b/config/modules.config
@@ -45,12 +45,12 @@ process {
 
     withName: 'MARK_DUPLICATES' {
         ext.prefix = { "dedup" }
-        container = "namxle/gatk:4.6.1.0"
+        container = "${params.docker_registry}/gatk:4.6.1.0"
     }
 
     // withName: 'VARIANT_CALLING' {
     //    ext.prefix = { "vc" }
-    //    container = "broadinstitute/gatk:4.6.1.0"
+    //    container = "${params.docker_registry}/gatk:4.6.1.0"
     // }
 
     withName: 'ANALYZE_GENE_COVERAGE' {
